WebCore/rendering/RenderSVGAllInOne.cpp
@@ -53,6 +53,7 @@
 #include "RenderSVGViewportContainer.cpp"
 #include "SVGCharacterData.cpp"
 #include "SVGCharacterLayoutInfo.cpp"
+#include "SVGImageBufferTools.cpp"
 #include "SVGInlineFlowBox.cpp"
 #include "SVGInlineTextBox.cpp"
 #include "SVGMarkerLayoutInfo.cpp"
